--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <h2>Наші працівники:</h2>
               <ul>
                 <li>Тарас Земницький</li>
-                <li>Володимир Грицик</li>
+                <li>Помічники</li>
                </ul>
             <h2>Наші послуги:</h2>
             <ul>
