--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Мех Цех</title>
   <style>
+    html {
+      scroll-behavior: smooth;
+    }
     body {
       font-family: 'Segoe UI', sans-serif;
       margin: 0;
@@ -36,9 +39,12 @@
       color: white;
       text-decoration: none;
       font-weight: bold;
+      padding: 5px 10px;
+      border-radius: 5px;
+      transition: background 0.3s;
     }
     nav a:hover {
-      text-decoration: underline;
+      background: #34495e;
     }
     section {
       padding: 50px 20px;
